cwidget (0.5.17-1) UNRELEASED; urgency=medium

  * New upstream release
    - Incorporated changes of last NMUs
    - Remove -1.9 from some of the autotools commands, run instead the
      latest/default versions of the system (1.9 is quite old by now)
  * debian/source/format: move from "1.0" to "3.0 (quilt)"
  * debian/compat: level 9

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Sat, 22 Feb 2014 00:21:23 +0000

cwidget (0.5.16-5) unstable; urgency=medium

  * Bump Standards-Version to 3.9.5 (no changes needed)
  * Use dh-autoreconf instead of autotools-dev for better new-port
    coverage.  Thanks Colin Watson for the report and the patch (I applied
    it by hand and slightly modified since it didn't apply cleanly).
    (Closes: #732539)
  * Quell lintian warnings:
    - embedded-javascript-library: add Depends on libjs-jquery in the -doc
      package, and create a symbolic link instead of install the local copy
      of the file "jquery.min.js"
    - "binary-control-field-duplicates-source": remove duplicate Priority
      field from most of the binary packages
    - missing-debian-source-format: add "1.0" to "debian/source/format"
      for the time being
    - vcs-field-not-canonical
    - no-upstream-changelog: upstream's NEWS is the changelog
  * In -doc package, downgrade browser from Recommends to Suggests
  * VCS changed from 'cwidget/debian/.git' to 'cwidget/cwidget.git'

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Fri, 21 Feb 2014 18:02:04 +0000

cwidget (0.5.16-4) unstable; urgency=medium

  * New maintainer (Closes: #738893)
  * Incorporate changes from all previous NMUs

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Sat, 15 Feb 2014 16:45:15 +0000

cwidget (0.5.16-3.5) unstable; urgency=low

  * Non-maintainer upload.
  * Support cross-building (thanks, Eleanor Chen; closes: #721357).
  * Use the autotools-dev dh addon to update config.guess/config.sub for
    arm64 (closes: #725913).
