@@ -18,8 +18,10 @@ Build-Depends-Indep: doxygen,
 Standards-Version: 3.9.5
 
 Package: libcwidget3
-Architecture: any
 Priority: important
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends},
          ${shlibs:Depends}
 Suggests: libcwidget-dev
@@ -32,8 +34,9 @@ Description: high-level terminal interface library for C++ (runtime files)
  compiled against libcwidget.
 
 Package: libcwidget3-dbg
-Architecture: any
 Section: debug
+Architecture: any
+Multi-Arch: same
 Depends: ${misc:Depends},
          libcwidget3 (= ${binary:Version})
 Suggests: libcwidget-dev
@@ -47,8 +50,9 @@ Description: high-level terminal interface library for C++ (debugging files)
  using cwidget.
 
 Package: libcwidget-dev
-Architecture: any
 Section: libdevel
+Architecture: any
+Multi-Arch: same
 Depends: ${misc:Depends},
          libcwidget3 (= ${binary:Version}),
          libsigc++-2.0-dev,
@@ -69,8 +73,9 @@ Description: high-level terminal interface library for C++ (development files)
  to avoid cwidget for stable projects.
 
 Package: libcwidget-doc
-Architecture: all
 Section: doc
+Architecture: all
+Multi-Arch: foreign
 Depends: ${misc:Depends},
          libjs-jquery
 Suggests: libcwidget-dev,
