@@ -1,5 +1,5 @@
 usr/include/cwidget
-usr/lib/libcwidget.so
-usr/lib/libcwidget.a
-usr/lib/pkgconfig
-usr/lib/cwidget
+usr/lib/*/libcwidget.so
+usr/lib/*/libcwidget.a
+usr/lib/*/pkgconfig
+usr/lib/*/cwidget
